--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "api",
     "nodejs",
     "express",
-    "mongoose"
+    "mongodb",
+    "bcrypt"
   ],
   "author": "Grigorasch",
   "license": "ISC",
@@ -24,7 +25,8 @@
   },
   "homepage": "https://github.com/Grigorasch/panel-rest-api#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "mongodb": "^5.6.0"
   }
 }
