--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Реализация контролера MVC. Управление осуществдяется из админ панели базой уроков, сообщений, ролей. Разрабатывается в рамках тестового задания на должность frontend-разработчика в компанию GUSCOM",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
