--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongodb": "^5.6.0"
+  },
+  "devDependencies": {
+    "jsdoc": "^4.0.2"
   }
 }
